--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -63,14 +63,15 @@
     padding-top: 25px;
 }
 
-.footer-menu ul{
-    list-style: none;
-}
-.footer-menu li{
+
+.footer-menu .footer-link{
     display: inline-block;
     padding: 0 15px;
 }
-.footer-menu ul li a{
+.footer-menu ul .footer-link{
     text-decoration: none;
     color: black;
+}
+.footer-menu ul{
+   list-style: none;
 }
